Cambiado el yaml de Centro a V3
