# Apis/Centro/Centrov3/swagger_server/controllers/asignaturas_controller.py
@@ -19,7 +19,7 @@ def asignatura_id_asignatura_get(idAsignatura):
 
     :rtype: Asignatura
     """
-    conn_string = "host='localhost' dbname='Centro' user='postgres' password='1234'"
+    conn_string = "host='localhost' dbname='Centros' user='ISA' password='1234'"
 	# print the connection string we will use to connect
     print ("Connecting to database\n")
 	# get a connection, if a connect cannot be made an exception will be raised here
@@ -35,15 +35,46 @@ def asignatura_id_asignatura_get(idAsignatura):
     query = "SELECT * FROM \"grado_asignatura\" WHERE id_asignatura="+str(idAsignatura)+";"
     cursor.execute(query)
     records = cursor.fetchall()
-    cadena = cadena + records
+    query = "SELECT * FROM \"asignatura\" WHERE id_asignatura="+str(idAsignatura)+";"
+    cursor.execute(query)
+    records2 = cursor.fetchall()
+    query = "SELECT * FROM \"grado\" WHERE id_grado="+str(records[0][4])+";"
+    cursor.execute(query)
+    records3 = cursor.fetchall()
+    json1 = {
+        "idAsignatura" : records[0][5],
+        "idGrado" : records[0][4],
+        "creditosAsignaturas" : records[0][1],
+        "turnoAsignatura" : records[0][3],
+        "nombreAsignatura" : records2[0][1],
+        "nombreGrado" : records3[0][1]
+    }
     conn.close()
 	# print out the records using pretty print
 	# note that the NAMES of the columns are not shown, instead just indexes.
 	# for most people this isn't very useful so we'll show you how to return
 	# columns as a dictionary (hash) in the next example.
-    return json.dumps(records)
-
-
+    return json1
+def gradoasignatura_id_grado_asignatura_get(idGradoAsignatura):
+    conn_string = "host='localhost' dbname='Centros' user='ISA' password='1234'"
+	# print the connection string we will use to connect
+    print ("Connecting to database\n")
+	# get a connection, if a connect cannot be made an exception will be raised here
+    conn = psycopg2.connect(conn_string)
+	# conn.cursor will return a cursor object, you can use this cursor to perform queries
+    cursor = conn.cursor()
+	# execute our Query
+    query = "SELECT * FROM \"grado_asignatura\" WHERE \"id_gradoAsignatura\"="+str(idGradoAsignatura)+";"
+    cursor.execute(query)
+    records = cursor.fetchall()
+    json1 = {
+        "idAsignatura" : records[0][5],
+        "idGrado" : records[0][4],
+        "idGradoAsignatura" : records[0][0],
+        "creditosAsignaturas" : records[0][1],
+        "turnoAsignatura" : records[0][3],
+    }
+    return json1
 def get_asignaturas(tamanoPagina, numeroPaginas):
     """
     Obtiene un listado de todas las asignaturas de la Base de datos
@@ -55,7 +86,8 @@ def get_asignaturas(tamanoPagina, numeroPaginas):
 
     :rtype: List[Asignatura]
     """
-    conn_string = "host='localhost' dbname='Centro' user='postgres' password='1234'"
+    jsons = []
+    conn_string = "host='localhost' dbname='Centros' user='ISA' password='1234'"
 	    # print the connection string we will use to connect
     print ("Connecting to database\n")
         # get a connection, if a connect cannot be made an exception will be raised here
@@ -67,8 +99,7 @@ def get_asignaturas(tamanoPagina, numeroPaginas):
     cursor.execute(query)
     records = cursor.fetchall()
     conn.close()
-    return json.dumps(records)
-
+    return jsons
 
 
 def post_asignatura(asignatura):
@@ -82,7 +113,7 @@ def post_asignatura(asignatura):
     """
     if connexion.request.is_json:
         asignatura = AsignaturaCodGrado.from_dict(connexion.request.get_json())
-        conn_string = "host='localhost' dbname='Centro' user='postgres' password='1234'"
+        conn_string = "host='localhost' dbname='Centros' user='ISA' password='1234'"
 	    # print the connection string we will use to connect
         print ("Connecting to database\n")
         # get a connection, if a connect cannot be made an exception will be raised here
@@ -93,12 +124,11 @@ def post_asignatura(asignatura):
         query = "Insert Into \"asignatura\" Values ( "+str(asignatura.id_asignatura)+",'"+str(asignatura.nombre)+"','hola');"
         cursor.execute(query)
         conn.commit()
-        query = "Insert Into \"grado_asignatura\" Values ( "+str(asignatura.id_asignatura+asignatura.cod_grado)+",'"+str(asignatura.num_creditos)+"','"+str(asignatura.tipo_asignatura)+"','Mañana',"+str(asignatura.cod_grado)+","+str(asignatura.id_asignatura)+";"
+        query = "Insert Into \"grado_asignatura\" Values ( "+str(asignatura.id_asignatura+2*asignatura.cod_grado)+",'"+str(asignatura.num_creditos)+"','"+str(asignatura.tipo_asignatura)+"','Mañana',"+str(asignatura.cod_grado)+","+str(asignatura.id_asignatura)+");"
         cursor.execute(query)
         conn.commit()
         conn.close()
         return json.dumps("TodoCorrecto")
-    
 
 
 def remove_asignatura(idAsignatura):
@@ -110,7 +140,7 @@ def remove_asignatura(idAsignatura):
 
     :rtype: Asignatura
     """
-    conn_string = "host='localhost' dbname='Centro' user='postgres' password='1234'"
+    conn_string = "host='localhost' dbname='Centros' user='ISA' password='1234'"
 	    # print the connection string we will use to connect
     print ("Connecting to database\n")
         # get a connection, if a connect cannot be made an exception will be raised here
@@ -121,26 +151,26 @@ def remove_asignatura(idAsignatura):
     query = "DELETE FROM \"grado_asignatura\" where id_asignatura="+str(idAsignatura)+";"
     cursor.execute(query)
     conn.commit()
-    query = "DROP  from \"asignatura\" where id_asignatura="+str(idAsignatura)+";"
+    query = "DELETE  from \"asignatura\" where id_asignatura="+str(idAsignatura)+";"
     cursor.execute(query)
     conn.commit()
     conn.close()
 
-    return json.dumps("Eliminación correcta")
+    return json.dumps("Eliminacion correcta")
 
 
-def update_asignatura(Asignatura):
+def update_asignatura(asignatura):
     """
     Actualizar los datos de una asignatura
     Actualiza los datos de la asignatura
-    :param Asignatura: Codigo de la asignatura
-    :type Asignatura: dict | bytes
+    :param asignatura: Codigo de la asignatura
+    :type asignatura: dict | bytes
 
     :rtype: Asignatura
     """
     if connexion.request.is_json:
         asignatura = Asignatura.from_dict(connexion.request.get_json())
-        conn_string = "host='localhost' dbname='Centro' user='postgres' password='1234'"
+        conn_string = "host='localhost' dbname='Centros' user='ISA' password='1234'"
 	    # print the connection string we will use to connect
         print ("Connecting to database\n")
         # get a connection, if a connect cannot be made an exception will be raised here
@@ -148,7 +178,7 @@ def update_asignatura(Asignatura):
         # conn.cursor will return a cursor object, you can use this cursor to perform queries
         cursor = conn.cursor()
         # execute our Query
-        query = "UPDATE \"asignatura\" SET nombre='"+ str(asignatura.nombre) + "',descripcionAsignatura='HOLA' WHERE id_asignatura="+ str(asignatura.idAsignatura)+";"
+        query = "UPDATE \"asignatura\" SET \"nombreAsignatura\"='"+ str(asignatura.nombre) + "',\"descripcionAsignatura\"='HOLA' WHERE id_asignatura="+ str(asignatura.id_asignatura)+";"
         cursor.execute(query)
         conn.commit()
         conn.close()
